--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   flutter_riverpod: ^2.4.9
   cupertino_icons: ^1.0.2
   intl: ^0.19.0
+  http: ^1.1.0 
+  gbk_codec: ^0.4.0
 
 dev_dependencies:
   flutter_test:
