--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,9 @@
 org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+
+# 关闭 Kotlin 增量编译，避免 Kotlin Daemon 缓存在不同根路径之间的相对化错误
+kotlin.incremental=false
+kotlin.incremental.useClasspathSnapshot=false
+kotlin.caching.enabled=false
+kotlin.compiler.execution.strategy=in-process
